优化已知问题和新增食材搜索；

--- a/flutter_cook/pubspec.yaml
+++ b/flutter_cook/pubspec.yaml
@@ -59,9 +59,10 @@ dependencies:
   #列表上下拉刷新
   easy_refresh: ^3.3.4
 
-  #数据持久化
-  path_provider: ^2.0.2
+  #数据库
   sqflite:
+  path_provider: ^2.0.2
+  shared_preferences: ^2.2.2
 
 
 dev_dependencies:
